@@ -1,3 +1,9 @@
+2020-10-01         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* iolint.awk, iolint.ok: Adjust output to cat for exit status
+	portability.  Thanks to Andrew Schorr for finding the issue.
+	* Makefile.am (iolint): Adjust scaffolding around the test.
+
 2020-09-21         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (EXTRA_DIST): New test iolint. Sort the list of
